<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_attachment"
            android:checked="true"
            android:icon="@drawable/ic_person_white"
            android:title="@string/nav_item_attachment" />
        <item
            android:id="@+id/navigation_item_images"
            android:icon="@drawable/ic_bookmark"
            android:title="@string/nav_item_images" />
        <item
            android:id="@+id/navigation_item_location"
            android:icon="@drawable/ic_place"
            android:title="@string/nav_item_location" />
        <item
            android:id="@+id/navigation_item_setting"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_item_setting" />
        <item
            android:id="@+id/navigation_item_delete"
            android:icon="@drawable/ic_delete"
            android:title="@string/nav_item_setting" />

    </group>

    <item android:title="@string/nav_sub_menu">
        <menu>
            <item
                android:icon="@drawable/ic_build"
                android:title="@string/nav_sub_menu_item01" />
            <item
                android:icon="@drawable/ic_add_shopping"
                android:title="@string/nav_sub_menu_item02" />

            <item
                android:icon="@drawable/ic_image"
                android:title="@string/nav_sub_menu_item03" />

            <item
                android:icon="@drawable/ic_input"
                android:title="@string/nav_sub_menu_item04" />
        </menu>
    </item>

</menu>
